# scylla-db-proxy

./: .gitignore  Cargo.toml  Dockerfile  README.md
Docs/: CONTRIBUTING.md  USER_DOCUMENTATION.md
examples/example_direct_statement/: Cargo.toml
examples/example_direct_statement/src/: main.rs
src/: app_config.rs  common.rs  lib.rs  main.rs  queries.rs
src/service/: direct_statement.rs  execute_statement.rs  mod.rs
