[package]
name = "yaw_dbproxy"
version = "0.1.0"
authors = ["axxon-n <axxon-n-23@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-rt = "1.1.0"
# actix-web = "3.0.0-alpha.1"
# serde = "1.0.106"
# serde_json = "1.0.51"
# chrono = { version = "0.4", features = ["serde"] }
# uuid = { version = "0.8", features = ["serde", "v4"] }
# env_logger = "0.7.1"
json = "0.12"

## actix = "0.13"
## actix-broker = "0.4.2"
## actix-codec = "0.5"
## actix-cors = "0.6"
## actix-files = "0.6"
## actix-http = "3"
## actix-identity = "0.5"
## actix-multipart = "0.4"
## actix-protobuf = "0.9"
## actix-session = "0.7"
## actix-test = "0.1"
## actix-tls = "3.0"
## actix-utils = "3"

openssl = { version = "0.10", features = ["v110"] }
actix-web = { version = "4", features = ["openssl"] }

# actix-web = { version = "4", features = ["rustls-tls"] }

## actix-web-actors = "4.1"
## actix-web-lab = "0.17"
## actix-ws = "0.2.5"
awc = "3"

derive_more = "0.99.7"
env_logger = "0.10"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
log = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.24.1", features = ["sync"] }

scylla = { version = "0.7.0", features = ["ssl"] }
# scylla = "0.7.0"

dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
eyre = "0.6"
color-eyre = "0.6"
config = "0.11"
num_cpus = "1.13"
serde-querystring = "0.1.0"
envy = "0.4.2"
rustls = "0.20.8"
rustls-pemfile = "1.0.2"
anyhow = "1.0.69"
base64 = "0.21.0"
bigdecimal = "0.2.2"
