[package]
name = "example_direct_statement"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version="0.14.25", features = ["full"] }
hyper-tls = "0.5.0"
serde = "1.0.136"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
anyhow = "1.0.71"
serde_derive = "1.0"